--- a/scss/css/style.css
+++ b/scss/css/style.css
@@ -49,25 +49,33 @@ body {
   background-color: #ff7675;
   border-radius: 42px;
   overflow: hidden;
-  -webkit-box-shadow: 0px 0px 5px rgba(119, 10, 10, 0.5);
-          box-shadow: 0px 0px 5px rgba(119, 10, 10, 0.5);
+  -webkit-box-shadow: blue 0px 0px 0px 2px, white 10px -10px 0px -3px, #1fc11b 10px -10px, white 20px -20px 0px -3px, #ffd913 20px -20px, white 30px -30px 0px -3px, #ff9c55 30px -30px, white 40px -40px 0px -3px, #ff5555 40px -40px;
+          box-shadow: blue 0px 0px 0px 2px, white 10px -10px 0px -3px, #1fc11b 10px -10px, white 20px -20px 0px -3px, #ffd913 20px -20px, white 30px -30px 0px -3px, #ff9c55 30px -30px, white 40px -40px 0px -3px, #ff5555 40px -40px;
 }
 
-.container .buttons, .container .buttons button {
+.container .buttons {
   position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   bottom: 0;
   right: 50%;
   left: 50%;
   -webkit-transform: translate(-50%, 0%);
           transform: translate(-50%, 0%);
-  font-size: 1rem;
   font-weight: 400;
-  color: #ffe7f0;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
   width: 100%;
+  height: 5vh;
   text-align: center;
   background-color: #ff3300;
 }
@@ -76,16 +84,15 @@ body {
   border: none;
   text-decoration: none;
   height: 3rem;
-}
-
-.container .buttons .fa-quote-right {
-  size: 3x;
+  color: #ffe7f0;
+  background-color: #ff3300;
+  font-size: 1.7rem;
 }
 
 .container .content {
-  padding: 0, 10px;
+  padding: 5px 12px;
   font-size: 4rem;
-  font-weight: 200;
+  font-weight: 100;
   color: #ffe7f0;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
@@ -95,5 +102,13 @@ body {
 
 .container .content #authors {
   float: right;
+}
+
+.fa-quote-left {
+  color: #ffe7f0;
+}
+
+.fa-quote-right {
+  color: #ffe7f0;
 }
 /*# sourceMappingURL=style.css.map */
