--- a/scss/mixins.scss
+++ b/scss/mixins.scss
@@ -2,4 +2,7 @@
     border: none;
     text-decoration: none;
     height: 3rem;
+    color: #ffe7f0;
+    background-color: #ff3300;
+    font-size: 1.7rem;
 }
