--- a/scss/css/style.css
+++ b/scss/css/style.css
@@ -87,6 +87,7 @@ body {
   color: #ffe7f0;
   background-color: #ff3300;
   font-size: 1.7rem;
+  cursor: pointer;
 }
 
 .container .content {
@@ -110,5 +111,26 @@ body {
 
 .fa-quote-right {
   color: #ffe7f0;
+}
+
+.copyTo {
+  position: absolute;
+  bottom: 10vh;
+  right: 10vw;
+  padding: 5px;
+  border: none;
+  text-decoration: none;
+  height: 3rem;
+  color: #ffe7f0;
+  background-color: #ff3300;
+  font-size: 1.7rem;
+  cursor: pointer;
+}
+
+.tooltiptext {
+  position: absolute;
+  bottom: 16vh;
+  right: 10vw;
+  font-size: 1rem;
 }
 /*# sourceMappingURL=style.css.map */
